adding morphological data

--- a/todo
+++ b/todo
@@ -63,3 +63,6 @@ Hebrw morphology
 5.loop through all relationships to stem
 6.for each one go to step 2
 
+Occourances for simon:
+word frequence analysis
+
