fixing bug where morphology and word data was being cleared

--- a/todo
+++ b/todo
@@ -1,5 +1,13 @@
 //javascripture bugs
 ________________________________________
+
+// todo - sept 2014
+- add morph/lemma data for prepositions
+- why doesn't matthew 1 load?
+- fixing versification issues
+- creating a new literal consistent translation
+
+
 //scrolling deferred object
 
 
