lots of fixes for the literal consistent transation

--- a/todo
+++ b/todo
@@ -6,6 +6,7 @@ ________________________________________
 - why doesn't matthew 1 load?
 - fixing versification issues
 - creating a new literal consistent translation
+- remove + from lemma
 
 
 //scrolling deferred object
