make it possible to load areas where the hebrew and kjv don't line up

--- a/todo
+++ b/todo
@@ -2,7 +2,7 @@
 ________________________________________
 
 // todo - sept 2014
-- add morph/lemma data for prepositions
+- remove H from morph
 - why doesn't matthew 1 load?
 - fixing versification issues
 - creating a new literal consistent translation
