Adding bugs to fix

--- a/todo
+++ b/todo
@@ -1,3 +1,12 @@
+// bugs
+- search on dwyer-added
+- search on "the"
+- title on the search results
+- clear all
+- verse numbers in greek
+- remove bookmarks
+- padding in bookmarks
+
 // todo - sept 2014
 - remove H from morph
 - why doesn't matthew 1 load?
