--- a/todo
+++ b/todo
@@ -1,6 +1,8 @@
-// bugs
-- verse numbers in greek
-- remove bookmarks
+// todo
+- bookmarks in mobile
+- hash history
+- hover
+- loading more than 3 chapters
 
 // todo - sept 2014
 - remove H from morph
