remove more dead code

--- a/todo
+++ b/todo
@@ -1,22 +1,14 @@
 // todo
 - simplify word/word-single
-- hebrew search
 - hos 14:10?
+- gaps between words like there in
 
 
-
-
-
-
-
-- bookmarks in mobile
 - hash history
-- hover
-- loading more than 3 chapters
 
 // todo - sept 2014
 - remove H from morph
-- why doesn't matthew 1 load?
+
 - fixing versification issues
 - creating a new literal consistent translation
 - remove + from lemma
