--- a/todo
+++ b/todo
@@ -1,4 +1,7 @@
 // todo
+- fixing caching
+- make errors work better
+- set up a stable alternative site
 - improve mobile ui
 - browser cache
 - simplify word/word-single
