kick off another build

--- a/todo
+++ b/todo
@@ -1,5 +1,5 @@
 // todo
-- move to new repo
+- move to new repo using the fork
 - fixing caching
 - make errors work better
 - set up a stable alternative site
