--- a/todo
+++ b/todo
@@ -1,5 +1,7 @@
 // todo
 - fix john 6:20
+- ex 4:23 - no morph on the word to serve?
+
 - fix undefined parsing errors
 - add titles to psalms in ESV
 - fixing caching
