add sapce before parenthesis

--- a/todo
+++ b/todo
@@ -1,5 +1,7 @@
 // todo
-- fix john 6:20
+- fix esth 1:13
+
+- fix john 6:20 - WEB
 - ex 4:23 - no morph on the word to serve?
 
 - fix undefined parsing errors
