add clicked word to the title

--- a/todo
+++ b/todo
@@ -1,6 +1,7 @@
 // todo
 - yahweh in 1 sam 24:10 - ESV
 - fix esth 1:13
+- copy/paste spaces
 
 - fix john 6:20 - WEB
 - ex 4:23 - no morph on the word to serve?
