remove another reference to the global javascripture scope

--- a/todo
+++ b/todo
@@ -8,7 +8,7 @@
 - ex 4:23 - no morph on the word to serve?
 
 - fix undefined parsing errors
-- add titles to psalms in ESV
+- remove uninspired titles to psalms in ESV
 - fixing caching
 - make errors work better
 
