remove more containers

--- a/todo
+++ b/todo
@@ -1,4 +1,12 @@
 // todo
+- fix kjv def search
+
+- feature ideas
+	- family map
+	- literal consistent
+	- most common words in a passage
+	- most similar verse
+
 - yahweh in 1 sam 24:10 - ESV
 - fix esth 1:13
 - dan 5:25
