add a TODO list

--- a/todo
+++ b/todo
@@ -1,5 +1,12 @@
 // todo
+- use tab names in the footer
+- show tab names in the sidebar
+- make the reference selector better
 - fix kjv def search
+- make the clear option local and available alwayd
+- open help in a full screen
+- show javascripture.net
+
 
 - feature ideas
 	- family map
