add historical commits to reapply later

--- a/todo
+++ b/todo
@@ -6,7 +6,14 @@
 - make the clear option local and available alwayd
 - open help in a full screen
 - show javascripture.net
+- material-ui: cf933fffe1a083607d899ae591f245606c960746
 
+commit 215d8c4771c6f8b1a3d57ff47b1828cb0214235c
+commit 3e4cd291288dddef39dc7b995bedf300ef92ad79
+commit de64bd32a8a8b0f23bc58b0487a9d8d0e3eac4a1
+commit 00e0afda39a5f6269bd19ac029e3971f4c651d90
+commit d3fa968c739ef42885ed97bdaef6d286e1a2f0b7
+commit 1095bff18f2380d75ea0c5cb3a695a52b46917ce
 
 - feature ideas
 	- family map
