--- a/todo
+++ b/todo
@@ -1,4 +1,7 @@
 // todo
+- speed
+- can't see book names in portrait
+- 
 - use tab names in the footer
 - show tab names in the sidebar
 - make the reference selector better
@@ -7,6 +10,22 @@
 - open help in a full screen
 - show javascripture.net
 - material-ui: cf933fffe1a083607d899ae591f245606c960746
+- strongs number search
+- compare multiple pasages (not chapters)
+- focus column for keyboard shortcuts on reference
+- cross refs for jonah
+- touch reference - open selector
+- book selector doesn't scroll
+- book names are stupid!
+- if a lang doesn't load in OT show a good message
+- change farexnoah - NMV
+- icons are too small for touch
+- safari mobile - toolbar missing
+- copy/paste verses
+- search doesn't work in safari
+- book list should be in farsi
+- add sorani
+- 
 
 commit 215d8c4771c6f8b1a3d57ff47b1828cb0214235c
 commit 3e4cd291288dddef39dc7b995bedf300ef92ad79
