--- a/todo
+++ b/todo
@@ -25,6 +25,7 @@
 - book list should be in farsi
 - add sorani
 - esv psalm titles
+- go to ref in the URL when page opens
 
 commit 215d8c4771c6f8b1a3d57ff47b1828cb0214235c
 commit 3e4cd291288dddef39dc7b995bedf300ef92ad79
