add an accented version

--- a/todo
+++ b/todo
@@ -27,6 +27,10 @@
 - esv psalm titles
 - go to ref in the URL when page opens
 
+- for tisch
+	- chapter breaks in the wrong places
+	- book names wrong
+
 commit 215d8c4771c6f8b1a3d57ff47b1828cb0214235c
 commit 3e4cd291288dddef39dc7b995bedf300ef92ad79
 commit de64bd32a8a8b0f23bc58b0487a9d8d0e3eac4a1
