--- a/todo
+++ b/todo
@@ -6,7 +6,7 @@
 - combined search
 - common words
 - literal consistent
-
+- Selah in ESV
 
 stuff that will be fixed with muriel UI
 - can't see book names in portrait
