Move interface language to sidebar

--- a/todo
+++ b/todo
@@ -6,7 +6,10 @@
 - combined search
 - common words
 - literal consistent
-- Selah in ESV
+
+- match whole word is broken
+- show rare translations for a word
+
 
 stuff that will be fixed with muriel UI
 - can't see book names in portrait
