--- a/todo
+++ b/todo
@@ -6,7 +6,7 @@
 - combined search
 - common words
 - literal consistent
-
+- dark mode
 - match whole word is broken
 - show rare translations for a word
 
