add list reducer

--- a/todo
+++ b/todo
@@ -9,7 +9,7 @@
 - dark mode
 - match whole word is broken
 - show rare translations for a word
-
+- end of 2 corinthians missing
 
 stuff that will be fixed with muriel UI
 - can't see book names in portrait
